# LanisAPI

./: .gitignore  .readthedocs.yaml  LICENSE  README-DE.md  README.md  pyproject.toml  readme.md  requirements.txt
.github/workflows/: python-publish-rewrite.yml  python-publish.yml
docs/: conf.py  index.rst  requirements.txt
docs/source/: api.rst  conf.py  first_steps.rst  index.rst  repo.rst
docs/source/api/: all.rst  dict.rst  exceptions.rst  functions.rst  index.rst  main.rst  types.rst
docs/source/contributing/: bug_reporting.rst  index.rst  programming_help.rst
examples/: client_class.py  getting_substitutions.py
lanisapi/: __init__.py
lanisapi/_core/: __init__.py
lanisapi/_core/applets/: applets.py  parse.py
lanisapi/_core/authentication/: authenticate.py  session.py
lanisapi/_core/constants/: url.py
lanisapi/_core/schools/: parse.py  schools.py
lanisapi/applets/: __init__.py  applets.py  parse.py
lanisapi/authentication/: __init__.py  authenticate.py
lanisapi/constants/: url.py
lanisapi/core/: __init__.py
lanisapi/core/authentication/: account.py
lanisapi/core/constants/: __init__.py
lanisapi/schools/: __init__.py  parse.py  schools.py
lanisapi/substitutions/: __init__.py  parse.py  substitutions.py
src/LanisAPI/: LanisAPI.py  __init__.py  authentication_functions.py
src/lanisapi/: __init__.py  __version__.py  _constants.py  applets.py  auth.py  authentication_functions.py  client.py  constants.py  exceptions.py  lanisapi.py  schools.py  substitutions.py
src/lanisapi/core/client/: client.py
src/lanisapi/core/helper/: apps.py  exceptions.py  url.py
src/lanisapi/core/initialization/: authenticate.py  types.py
src/lanisapi/functions/: __init__.py  apps.py  authentication_types.py  calendar.py  conversations.py  schools.py  substitution.py  tasks.py
src/lanisapi/helpers/: __init__.py  authentication.py  cryptor.py  html_logger.py  request.py  wrappers.py
src/lanisapi/module/: module.py  typed.py
src/lanisapi/module/custom/: hello_world.py
src/lanisapi/module/experimental/: __init__.py  substitution_html.py
src/lanisapi/module/standard/: __init__.py  substitution.py
test/: schools.json
